@@ -1,6 +1,7 @@
 * Added #endif comments.
 * Moved Vector3 class to SphereSim namespace.
 * Switched to -O2 and enabled OpenMP.
+* Removed Server autostart and added exit on error to ActionSender.
 
 SphereSim 3.0.3:
 * Removed custom Array class, replaced by std::vector.
